fix create news

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGODB_URL=mongodb+srv://unibitsourav:7YG32Jt6PrQzbJmW@cluster0.vq5emeh.mongodb.net/news
 PORT=3007
+RAPIDAPI_SUMMARIZATION_APIKEY=eba7198ce2mshdc7a8149b7c3cbcp1835aajsn7327c413fe60
+RAPIDAPI_SUMMARIZATION_URL=https://gpt-summarization.p.rapidapi.com/summarize
